[package]
name = "funnybot"
version = "0.1.0"
authors = ["Elmar Athmer <elmar@athmer.org>"]
edition = "2018"
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/elmarx/funnybot.git"
homepage = "https://github.com/elmarx/funnybot"
keywords = ["tdd", "mocking", "testing", "mock"]
description = "Simple/naive helper for custom mocking: record arguments, return pre-recorded values"

[dependencies]
